<resources>
    <string name="app_name">To-Do List</string>
    <string name="add_new_note">Add new note</string>
    <string name="enter_your_note">Enter your note</string>
    <string name="error_empty_user_note_text_field">Error, please type your note!</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="select_your_deadline_time">Select your deadline time:</string>
    <string name="create_note">Create note</string>
</resources>